--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       padding: 10px;
     }
   </style>
-</head>
+   
+   <script defer src="js/challenge.js"></script> 
+
+  </head>
 <body>
   <h1>
     Welcome to the DOM Challenge
@@ -39,7 +42,7 @@
 
   </div>
 
-  <script src="js/index.min.js"></script>
-  <script src="js/challenge.js"></script>
+<!--<script src="js/index.min.js"></script>-->
+  
 </body>
 </html>
